<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background2blurry">



    <TextView
        android:id="@+id/brand_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:fontFamily="@font/pacifico"
        android:textColor="@color/black"
        android:text="@string/brand_name"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="160dp"
        android:text="@string/email"
        android:textSize="13sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/password"
        android:textSize="13sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:layout_height="54dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/or"
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="12sp"/>
    <Button
        android:id="@+id/log_in_with_facebook"
        android:text="@string/log_in_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/facebook_blue"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="100dp"
        android:drawableStart="@drawable/facebookf"/>



</LinearLayout>