<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background2blurry">

    <TextView
        android:id="@+id/brand_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="80sp"
        android:textAlignment="center"
        android:fontFamily="@font/pacifico"
        android:textColor="@color/black"
        android:text="@string/brand_name"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="120dp"
        android:hint="@string/name"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColorHint="@color/sky_color"
        android:textColor="@color/sky_color"
        android:backgroundTint="@color/sky_color"
        android:inputType="text"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="100dp"
        android:hint="@string/email"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColorHint="@color/sky_color"
        android:textColor="@color/sky_color"
        android:backgroundTint="@color/sky_color"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="100dp"
        android:hint="@string/password"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColorHint="@color/sky_color"
        android:textColor="@color/sky_color"
        android:inputType="textPassword"
        android:backgroundTint="@color/sky_color"/>

    <Button
        android:id="@+id/create_account"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:background="@drawable/white_background"/>

</LinearLayout>